// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`backtick.md 1`] = `
\`\` \`123\` \`\`

\`\`12\`34\`\`

\`\` \`12\`\`

\`\`34\` \`\`

\`\` \`\`\`123\`\`\` \`\`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\`\` \`123\` \`\`

\`\` 12\`34 \`\`

\`\` \`12 \`\`

\`\` 34\` \`\`

\` \`\`\`123\`\`\` \`

`;

exports[`cjk.md 1`] = `
\`const x = "中文123"\`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\`const x = "中文123"\`

`;

exports[`escape.md 1`] = `
\`1*2*3\`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\`1*2*3\`

`;

exports[`long.md 1`] = `
\`this is a long long long long long long long long long long long long long long long inline code\`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\`this is a long long long long long long long long long long long long long long long inline code\`

`;

exports[`simple.md 1`] = `
\`123\`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\`123\`

`;
